--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple note-taking website built with Node.js, Express.js, and MongoDB.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
